[tool.poetry]
name = "rex"
version = "0.1.0"
description = ""
authors = ["AiWaldoh <kevin@gptcoder.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
watchdog = "^4.0.1"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
